[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Francisco Edson Lopes da Silva <fco.edson.lopes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.1"
numpy = "~2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
