[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Francisco Edson Lopes da Silva <fco.edson.lopes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
httpx = "^0.28.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.1"
numpy = ">=2.1.2,<2.1.3"
requests = "^2.32.3"
scipy = "^1.15.2"
beautifulsoup4 = "^4.13.4"
django = "^5.2"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.40"
pytest = "^8.3.5"
simpy = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
